se elimino fotos y logo

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
     <!-- Loader -->
     <div id="loader">
-        <img src="lymlogo.jpg" alt="Loading" class="loader-logo">
+        <img src="" alt="Loading" class="loader-logo">
     </div>
 
     <!-- Header -->
     <header>
-        <img src="lymsinfondo.png" alt="L&M Logo" class="logo-header">
+        <img src="" alt="L&M Logo" class="logo-header">
         <a href="#" class="cta-whatsapp">💬 WhatsApp</a>
     </header>
 
